[gd_scene load_steps=18 format=3 uid="uid://ky1tv07nahro"]

[ext_resource type="PackedScene" uid="uid://cqmipwjw5ygil" path="res://src/Scenes/Arena/Arena.tscn" id="1_kwadw"]
[ext_resource type="Script" uid="uid://dc8d3py4vg0ax" path="res://src/Scripts/main.gd" id="1_n3v4m"]
[ext_resource type="PackedScene" uid="uid://cgr2l1hrv624l" path="res://src/Scenes/HUD/WaveTimerLabel.tscn" id="3_tmvmo"]
[ext_resource type="FontFile" uid="uid://dyx88gwegholf" path="res://Assets/Art/Font/Vampire Zone.ttf" id="4_j4yc3"]
[ext_resource type="Texture2D" uid="uid://c1q6vlcb41jc6" path="res://Assets/Art/2D Assets/MagazineUnder.png" id="5_d85jq"]
[ext_resource type="Texture2D" uid="uid://bqq433bs811mc" path="res://Assets/Art/2D Assets/Bullet.png" id="6_ohpsy"]
[ext_resource type="Texture2D" uid="uid://c6l2brcd36hkp" path="res://Assets/Art/2D Assets/MagazineOver.png" id="7_p301h"]

[sub_resource type="Animation" id="Animation_ohpsy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../HUD/Magazine:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1025, 630)]
}

[sub_resource type="Animation" id="Animation_d85jq"]
resource_name = "hide_mag"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../HUD/Magazine:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19999999),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1025, 630), Vector2(1284, 630)]
}

[sub_resource type="Animation" id="Animation_3efb3"]
resource_name = "reload"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../HUD/Magazine:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19991225, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1024, 630), Vector2(1285, 630), Vector2(1285, 630), Vector2(1024, 630)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8666667, 1.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"reload_pistol"
}, {
"args": [],
"method": &"hide_reload_notification"
}]
}

[sub_resource type="Animation" id="Animation_p301h"]
resource_name = "show_mag"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../HUD/Magazine:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1284, 630), Vector2(1025, 630)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ohpsy"]
_data = {
&"RESET": SubResource("Animation_ohpsy"),
&"hide_mag": SubResource("Animation_d85jq"),
&"reload": SubResource("Animation_3efb3"),
&"show_mag": SubResource("Animation_p301h")
}

[sub_resource type="Animation" id="Animation_j4yc3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountDownLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CountDownLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xyvdf"]
resource_name = "WaveStartCountDown"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountDownLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.0010458, 2.0020916, 3.0031374, 3.9968765, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["5", "4", "3", "2", "1", "Survive!"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CountDownLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CountDownLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(5.0293536, 6.9333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CountDownLabel:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CountDownLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 6.9333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"set_wave_parameters"
}, {
"args": [],
"method": &"start_wave"
}]
}

[sub_resource type="Animation" id="Animation_u2m37"]
resource_name = "Invincibility"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.3, 0.96666664, 1.7, 2.5, 3.2666667, 4.1, 4.8, 5.2, 5.5333333, 5.8333335, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ojnsd"]
resource_name = "Dead"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.9666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.9666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"transition_to_game_over_screen"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eml7d"]
_data = {
&"Dead": SubResource("Animation_ojnsd"),
&"Invincibility": SubResource("Animation_u2m37"),
&"RESET": SubResource("Animation_j4yc3"),
&"WaveStartCountDown": SubResource("Animation_xyvdf")
}

[node name="Main" type="Node3D"]
script = ExtResource("1_n3v4m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Arena" parent="CanvasLayer/SubViewportContainer/SubViewport" instance=ExtResource("1_kwadw")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="HUD"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.574492, 0.08164664, 9.62615e-08, 1)

[node name="WaveTimerLabel" parent="HUD" instance=ExtResource("3_tmvmo")]
offset_left = -122.0
offset_top = -277.0
offset_right = 86.0
offset_bottom = -218.5

[node name="CountDownLabel" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -75.0
offset_right = 318.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_j4yc3")
theme_override_font_sizes/font_size = 150
text = "5"
horizontal_alignment = 1

[node name="ReloadNotification" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -203.0
offset_right = 192.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_j4yc3")
theme_override_font_sizes/font_size = 100
text = "Reload!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="HUD"]
offset_left = 22.0
offset_top = 22.0
offset_right = 83.0
offset_bottom = 45.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_j4yc3")
theme_override_font_sizes/font_size = 22
text = "Score"

[node name="KillQuotaLabel" type="Label" parent="HUD"]
offset_left = 1153.0
offset_top = 19.0
offset_right = 1268.0
offset_bottom = 42.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_j4yc3")
theme_override_font_sizes/font_size = 22
text = "Kill Quota"

[node name="ScoreCount" type="Label" parent="HUD"]
offset_left = 20.0
offset_top = 50.0
offset_right = 183.0
offset_bottom = 83.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_j4yc3")
theme_override_font_sizes/font_size = 32
text = "100000"

[node name="KillCount" type="Label" parent="HUD"]
offset_left = 1156.0
offset_top = 50.0
offset_right = 1264.0
offset_bottom = 83.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_j4yc3")
theme_override_font_sizes/font_size = 32
text = "5/30"
horizontal_alignment = 2

[node name="TotalTimer" type="Label" parent="HUD"]
offset_left = 596.0
offset_top = 22.0
offset_right = 657.0
offset_bottom = 45.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_j4yc3")
theme_override_font_sizes/font_size = 22
text = "05:27"

[node name="Magazine" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -255.0
offset_top = -90.0
grow_horizontal = 0
grow_vertical = 0

[node name="MagazineUnder" type="TextureRect" parent="HUD/Magazine"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -45.0
offset_right = 128.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_d85jq")

[node name="Bullets" type="HBoxContainer" parent="HUD/Magazine"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -35.5
offset_right = 127.0
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Bullet7" type="TextureRect" parent="HUD/Magazine/Bullets"]
layout_mode = 2
texture = ExtResource("6_ohpsy")

[node name="Bullet8" type="TextureRect" parent="HUD/Magazine/Bullets"]
layout_mode = 2
texture = ExtResource("6_ohpsy")

[node name="Bullet9" type="TextureRect" parent="HUD/Magazine/Bullets"]
layout_mode = 2
texture = ExtResource("6_ohpsy")

[node name="Bullet10" type="TextureRect" parent="HUD/Magazine/Bullets"]
layout_mode = 2
texture = ExtResource("6_ohpsy")

[node name="Bullet11" type="TextureRect" parent="HUD/Magazine/Bullets"]
layout_mode = 2
texture = ExtResource("6_ohpsy")

[node name="Bullet12" type="TextureRect" parent="HUD/Magazine/Bullets"]
layout_mode = 2
texture = ExtResource("6_ohpsy")

[node name="MagazineOver" type="TextureRect" parent="HUD/Magazine"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -45.0
offset_right = 128.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_p301h")

[node name="Health" type="HBoxContainer" parent="HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = -96.0
offset_right = 360.0
offset_bottom = -37.0
grow_vertical = 0

[node name="ColorRect2" type="ColorRect" parent="HUD"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.574492, 0.08164664, 9.62615e-08, 1)

[node name="MagazineReloadAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
&"": SubResource("AnimationLibrary_ohpsy")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../HUD")
libraries = {
&"": SubResource("AnimationLibrary_eml7d")
}

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
